--- a/src/app/clip/clip.component.html
+++ b/src/app/clip/clip.component.html
@@ -11,11 +11,14 @@
     </div>
 
     <!-- Video Editor -->
-    <div class="relative aspect-video">
+    <div class="relative aspect-w-16 aspect-h-9">
       <!-- Video Player -->
-      <video controls #videoPlayer crossorigin
-        class="video-js vjs-theme-forest mx-auto">
-      </video>
+      <video
+        controls
+        #videoPlayer
+        crossorigin
+        class="video-js vjs-theme-forest mx-auto"
+      ></video>
     </div>
   </div>
 </section>
